--- a/src/app/main-header/main-header.component.css
+++ b/src/app/main-header/main-header.component.css
@@ -59,7 +59,7 @@
   }
   #mainNav .navbar-nav>li.nav-item>a.nav-link,
   #mainNav .navbar-nav>li.nav-item>a.nav-link:focus {
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(255, 255, 255, 0.9);
   }
   #mainNav .navbar-nav>li.nav-item>a.nav-link:hover,
   #mainNav .navbar-nav>li.nav-item>a.nav-link:focus:hover {
@@ -84,4 +84,8 @@
   #mainNav.navbar-shrink .navbar-nav>li.nav-item>a.nav-link:focus:hover {
     color: #F05F40;
   }
+}
+
+.navLinkBackground {
+  background-color: rgba(0, 0, 0, 0.7)
 }
