--- a/src/styles.css
+++ b/src/styles.css
@@ -40,10 +40,6 @@ h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
-.text-faded {
-  color: rgba(255, 255, 255, 0.7);
-}
-
 section {
   padding: 8rem 0;
 }
